[project]
name = "attention-visualiser"
version = "0.1.0"
description = "a module to visualise attention layer activations from transformer based models from huggingface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "loguru>=0.7.3",
    "seaborn>=0.13.2",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "jax>=0.6.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "torch>=2.7.0",
]
